--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <p class="footer-text">&copy; Rahul Pandey</p>
       <div class="footer-link">
         <a
-          href="www.linkedin.com/in/rahul-pandey2005"
+          href="https://www.linkedin.com/in/rahul-pandey2005/"
           class="linkedin"
           target="_blank"
           ><img class="footer-img" src="/images/linkedin.png" alt="LinkedIn"
