--- a/index.html
+++ b/index.html
@@ -65,34 +65,34 @@
         <div class="slider">
           <div class="slides slide-div-1">
             <p class="slide-link-text slide1-text">
-              A typographical trailer for Cypher 3331. <br /><a
-                href="https://drive.google.com/file/d/1hbSCqQBLgh6fkH2Pj5BzRkTq8Dl02iqB/view?usp=drive_link"
+              A website to display conference information <br /><a
+                href="https://tech-conferences.vercel.app/"
                 class="slide-link" target="_blank">Click here</a>
-              to watch it (sound on)
+              to visit.
             </p>
-            <img id="slide-1" src="/images/cypher-trailer-ss.png" alt="A typographical trailer for Cypher 3331" />
+            <img id="slide-1" src="/images/tech-conferences.png" alt="A typographical trailer for Cypher 3331" />
           </div>
-          <div class="slides slide-div-2">
+          <!-- <div class="slides slide-div-2">
             <p class="slide-link-text slide2-text">
               MLAS Speakers Social Media Post
             </p>
             <img id="slide-2" src="/images/mlas-speaker-post.png" alt="MLAS Speakers Social Media Post" />
-          </div>
-          <div class="slides slide-div-3">
-            <p class="slide-link-text slide3-text">
+          </div> -->
+          <div class="slides slide-div-2">
+            <p class="slide-link-text slide2-text">
               Some Frontend Mentor Challenges<br /><a
                 href="https://rahul-p19.github.io/frontend-mentor-solutions-rahul/" class="slide-link"
                 target="_blank">Click here</a>
               to visit.
             </p>
-            <img id="slide-3" src="/images/frontend-mentor-product-preview.png"
+            <img id="slide-2" src="/images/frontend-mentor-product-preview.png"
               alt="Some frontend challenges from Frontend Mentor" />
           </div>
         </div>
         <div class="slider-nav">
-          <a href="#slide-1" class="slider-nav-link"></a>
-          <a href="#slide-2" class="slider-nav-link"></a>
-          <a href="#slide-3" class="slider-nav-link"></a>
+          <a href="#slide-1" class="slider-nav-link">&lsaquo;</a>
+          <a href="#slide-2" class="slider-nav-link">&rsaquo;</a>
+          <!-- <a href="#slide-3" class="slider-nav-link"></a> -->
         </div>
       </div>
     </div>
